--- a/1_General Security Concepts/1.4_Appropriate-Cryptographic-Solutions.md
+++ b/1_General Security Concepts/1.4_Appropriate-Cryptographic-Solutions.md
@@ -100,4 +100,7 @@ Digital certificates are electronic documents used to prove the ownership of a p
 
 * **Certificate Authorities (CAs):** Trusted third-party organizations that issue and manage digital certificates. They bind a public key to an identity.
 * **Certificate Revocation Lists (CRLs):** A list maintained by a CA of certificates that it has issued but that are no longer valid (e.g., due to a compromised private key or expired certificate).
-* **Online Certificate Status Protocol (OCSP):** An alternative to CRLs, allowing
+* **Online Certificate Status Protocol (OCSP):** An alternative to CRLs, allowing clients to check the real-time revocation status of a specific certificate without downloading the full list.
+– Faster and more efficient than CRLs
+– Reduces overhead on the client side
+– Often used in HTTPS connections to validate server certificates
