--- a/03_Security Architecture/3.3_Concepts-and-Strategies-to-Protect-Data.md
+++ b/03_Security Architecture/3.3_Concepts-and-Strategies-to-Protect-Data.md
@@ -53,8 +53,57 @@ Categorizing data based on its sensitivity and business impact helps determine a
 
 ## General Data Considerations
 
-Factors influencing data protection strategies.
+## Data States
 
-* **Data states:**
-    * **Data at rest:**
-        * **Description:** Data stored on physical media (e.g., hard drives, USB drives, backups, databases
+   ### Data at Rest
+
+**Description:**  
+Data stored on physical or virtual media (e.g., hard drives, USB drives, backups, databases).
+
+**Risks:**  
+- Unauthorized access  
+- Data theft  
+- Loss due to device compromise or theft
+
+**Protection Measures:**  
+- Full-disk encryption  
+- File-level encryption  
+- Access controls (e.g., role-based access)  
+- Physical security of storage devices
+
+---
+
+   ### Data in Transit
+
+**Description:**  
+Data moving between systems, users, or devices (e.g., emails, file transfers, API requests).
+
+**Risks:**  
+- Interception  
+- Man-in-the-middle attacks  
+- Tampering
+
+**Protection Measures:**  
+- TLS/SSL encryption  
+- VPN tunnels  
+- Secure file transfer protocols (e.g., SFTP)  
+- Network segmentation and firewalls
+
+---
+
+   ### Data in Use
+
+**Description:**  
+Data being actively processed by applications or accessed by users (e.g., in RAM, during computations).
+
+**Risks:**  
+- Memory scraping  
+- Unauthorized access  
+- Malware
+
+**Protection Measures:**  
+- Endpoint protection  
+- Access monitoring  
+- Secure coding practices  
+- Trusted execution environments (TEE)
+
