--- a/4_Security Operations/4.2_Asset-Management.md
+++ b/4_Security Operations/4.2_Asset-Management.md
@@ -38,5 +38,13 @@ Asset management involves identifying, tracking, and managing the lifecycle of a
     * **Security Implications:** Provides deep visibility into the attack surface of each asset, facilitating vulnerability management, configuration auditing, and compliance checks.
 
 ### Disposal/decommissioning
+ 
+**Description:** The secure process of removing assets from service and ensuring that no sensitive data remains or can be accessed after disposal.  
 
-* **Description:** The secure process of removing assets from service and ensuring that no sensitive data remains or can
+**Security Implications:**  
+- **Data Sanitization:** Ensuring all data is securely wiped or destroyed (e.g., using DoD wipe standards or physical destruction of drives) to prevent data leaks.  
+- **Revocation of Access:** Removing all associated user accounts, API keys, and network access tied to the decommissioned asset to eliminate potential backdoors.  
+- **License & Compliance Management:** Properly retiring or transferring all software licenses to avoid compliance or legal issues.  
+- **Secure Disposal:** Using certified e-waste disposal services to ensure hardware cannot be resold or recovered with sensitive data intact.  
+- **Documentation:** Updating the asset inventory to reflect the decommissioning, ensuring no "ghost assets" remain untracked or unmanaged.  
+
